# congestion-agent

./: .gitignore  AGENTS.md  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/rules/: agent.md  trigger.md
agent/: loop.py  schema.py  tools.py
agent_system/: main.py
agent_system/agent/: __init__.py  agent.py
agent_system/domains/: __init__.py  congestion.py
agent_system/tools/: __init__.py  base.py  count_people.py  track_people_tool.py
agent_system/utils/: __init__.py  base.py  custom_logger.py  display.py  runner.py  utils.py  video.py
dashboard/: README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
dashboard/app/: App.svelte  app.css  global.d.ts
dashboard/src/: App.svelte  app.css  global.d.ts
docs/: README.md  install_in_linux.txt  install_in_windows.txt
io/: reporter.py  sampler.py
perception/: pipeline.py  tracker.py
scripts/: ab_trigger_reason.py  analyze_bottleneck.py  calibrate.py  diagnose_conf_buckets.py  diagnose_detector.py  diagnose_trigger_blocks.py  probe_agent.py  simple_react.py
src/: config.py  datatypes.py  logger.py  main.py
src/agent/: loop.py  main.py  prompt.py  schema.py  types.py
src/io_utils/: reporter.py  sampler.py  session.py
src/perception/: density.py  detector.py  pipeline.py  tracker.py  zone_metrics.py
src/trigger/: history.py  rules.py
trigger/: history.py  rules.py
web/: main.py  server.py  settings.py  web.py
web/api/: flask_app.py
web/backend/: analyzer.py  flask_app.py  utils.py
(+37 files in other folders)
